# baka

./: .dockerignore  .env.prod  .gitignore  README.md  bot.py  docker-compose.yml  pyproject.toml  secret-schema.yml
.devcontainer/: devcontainer.json
