[tool.poetry]
name = "baka"
version = "0.1.0"
description = ""
authors = ["koswu <koswu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nonebot2 = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
